--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/test/**/target/
-
-.log
-
+#!**/src/test/**/target/
+/logs
+!**/src/test
 ### STS ###
 .apt_generated
 .classpath
