--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,18 +7,28 @@ server:
     key-store-type: PKCS12
   port: 8433
 
-
-
-
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/mobile_attendance_schema?useSSL=false&serverTimezone=UTC
     username: root
     password: root
+  cache:
+    redis:
+      time-to-live: 60m
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
+  global-config:
+    db-config:
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      logic-delete-field: deleted
+
 logging:
   level:
     com.as.attendance_springboot.mapper: DEBUG
