--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 #!**/src/test/**/target/
-/logs
-!**/src/test
+logs/
+src/test/
 ### STS ###
 .apt_generated
 .classpath
