新增公司接口,假期接口,假期额度接口;通过创建基类BaseController重构CURD操作代码;新建拜访表实体类

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!--        解决联合主键问题-->
+        <dependency>
+            <groupId>com.github.jeffreyning</groupId>
+            <artifactId>mybatisplus-plus</artifactId>
+            <version>1.7.0-RELEASE</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
