--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:name=".MainActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".ui.log.LogViewerActivity"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".ui.login.LoginActivity">
             <intent-filter >
