--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,26 +23,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileAttendance">
+
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="yyGlDVlfRnKfQCz3taneULq6q3IDiRe5" />
+
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
             android:process=":remote" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
         </activity>
-        <activity android:name=".ui.log.LogViewerActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".ui.login.LoginActivity">
-            <intent-filter >
+        <activity android:name=".ui.home.HomeActivity" android:exported="true">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.log.LogViewerActivity"
+            android:exported="true">
+        </activity>
+        <activity android:name=".ui.login.LoginActivity">
         </activity>
     </application>
 
