--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.1.0"
     // optional - Kotlin Extensions and Coroutines support for Room 协程操作库
     implementation "androidx.room:room-ktx:2.1.0"
-    implementation "androidx.work:work-runtime:2.2.0"
+//    implementation "androidx.work:work-runtime:2.2.0"
     implementation 'com.squareup.okhttp3:okhttp:3.14.9'
     implementation 'com.guolindev.permissionx:permissionx:1.6.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
